ajustando umas parada

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="./assets/images/logo-dark.svg" width="102" height="24" alt="Julia home">
+        <img src="./assets/images/logo-dark.svg" width="102" height="24" alt="Andre home">
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
           <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="102" height="24" alt="Julia home">
+            <img src="./assets/images/logo-light.svg" width="102" height="24" alt="Andre home">
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -142,7 +142,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/hero-banner1.jpg" width="560" height="540" alt="Julia" class="w-100"
+            <img src="./assets/images/hero-banner1.jpg" width="560" height="540" alt="Andre" class="w-100"
               data-reveal="top">
 
             <img src="./assets/images/hero-shape 1.svg" width="203" height="91" alt="250+ Projects Done" class="shape"
