--- a/index.html
+++ b/index.html
@@ -578,6 +578,8 @@
 
               <input type="hidden" name="accessKey" value="a447f326-176e-452c-b2f7-cee82298f0b5">
 
+              <input type="hidden" name="redirectTo" value="https://andrenm.netlify.app/">
+
             </form>
 
           </div>
