--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://soundcloud.com/xdezaum" class="social-link">
+              <ion-icon name="logo-soundcloud"></ion-icon>
             </a>
           </li>
 
@@ -102,14 +102,14 @@
             </a>
           </li>
 
-          <li>
+          <!-- <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
-          </li>
+          </li> -->
 
           <li>
-            <a href="https://open.spotify.com/playlist/1WENCySPlfZ7SCyocv8EXe?si=800e939b24e6429b" class="social-link">
+            <a href="https://open.spotify.com/playlist/1WENCySPlfZ7SCyocv8EXe?si=800e939b24e6429b" id="spotify" class="social-link">
               <h5>Spotify</h5>
             </a>
           </li>
@@ -155,7 +155,7 @@
               André Neckel Miguel
             </h1>
 
-            <p class="section-text" data-reveal="top" data-reveal-delay="0.75s" style="font-size: 20.5px;">
+            <p class="section-text" data-reveal="top" data-reveal-delay="0.75s" style="font-size: 19px;">
               Olá, muito prazer! Sou produtor musical freelancer de Porto Alegre, com sólida experiência em música e áudio. Minha paixão é transformar cada projeto em uma experiência sonora autêntica e profissional.
             </p>
 
@@ -424,7 +424,7 @@
                   <h3 class="h3 card-title">Meu Lado Caótico</h3>
 
                   <p class="card-text">
-                    Banda na qual faço parte e cuido de todo processo de produção musical até a masterização.
+                    Banda na qual sou responsável por todo processo de produção musical até a masterização.
                   </p>
 
                   <a href="https://open.spotify.com/intl-pt/artist/2guVTLkvO8QxmaRsTYuWTH?si=8H2J9Z1-RBStOLT0aEHYdw" class="btn-text" style="color: #a07cc5">
@@ -555,9 +555,9 @@
                 <img src="./assets/images/icon-9.svg" width="48" height="48" loading="lazy" alt="envelop icon">
               </div>
 
-              <h2 class="h2 section-title" style="font-size: 32px;">Se você gostou do que viu, vamos trabalhar juntos!</h2>
+              <h2 class="h2 section-title2">Se você gostou do que viu, vamos trabalhar juntos!</h2>
 
-              <p class="section-text" style="font-size: 16px;">
+              <p class="section-text2">
                 Trago soluções rápidas e atrativas. Tem alguma dúvida?
                   Me conte mais através deste formulário e entrarei em contato com você em breve.
               </p>
@@ -602,14 +602,14 @@
     <div class="container">
 
       <p class="copyright">
-        © 2024 MBRZZ. Todos os direitos reservados.
+        © 2024 <a href="https://mbrzz.netlify.app/">MBRZZ</a>. Todos os direitos reservados.
       </p>
 
       <ul class="social-list">
 
         <li>
-          <a href="#" class="social-link">
-            <ion-icon name="logo-facebook"></ion-icon>
+          <a href="https://soundcloud.com/xdezaum" class="social-link">
+            <ion-icon name="logo-soundcloud"></ion-icon>
           </a>
         </li>
 
@@ -620,14 +620,14 @@
           </a>
         </li>
 
-        <li>
+        <!-- <li>
           <a href="#" class="social-link">
             <ion-icon name="logo-youtube"></ion-icon>
           </a>
-        </li>
+        </li> -->
 
         <li>
-          <a href="https://open.spotify.com/playlist/1WENCySPlfZ7SCyocv8EXe?si=800e939b24e6429b" class="social-link">
+          <a href="https://open.spotify.com/playlist/1WENCySPlfZ7SCyocv8EXe?si=800e939b24e6429b" id="spotify" class="social-link">
             <h5>Spotify</h5>
           </a>
         </li>
