acrescentando foto profissional e + um projeto

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="container">
 
           <figure class="hero-banner">
-            <img src="./assets/images/hero-banner1.jpg" width="560" height="540" alt="Andre" class="w-100"
+            <img src="./assets/images/hero-banner.jpeg" width="560" height="540" alt="Andre" class="w-100"
               data-reveal="top">
 
             <img src="./assets/images/hero-shape 1.svg" width="203" height="91" alt="250+ Projects Done" class="shape"
@@ -156,7 +156,7 @@
             </h1>
 
             <p class="section-text" data-reveal="top" data-reveal-delay="0.75s" style="font-size: 19px;">
-              Olá, muito prazer! Sou produtor musical freelancer de Porto Alegre, com sólida experiência em música e áudio. Minha paixão é transformar cada projeto em uma experiência sonora autêntica e profissional.
+              Sou um jovem músico e engenheiro de áudio brasileiro com anos de experiência. Atualmente formado em produção fonográfica na Unisinos e já gravei, mixei e masterizei projetos de artistas de todo o país, e agora estou expandindo para trabalhar com pessoas de todo o mundo.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
@@ -446,17 +446,16 @@
 
                 <div class="card-content" data-reveal="right">
 
-                  <p class=" card-tag" style="color: #3f78e0">Mobile Design</p>
+                  <p class=" card-tag" style="color: #3f78e0">Captação de áudio</p>
 
-                  <h3 class="h3 card-title">Budget App</h3>
+                  <h3 class="h3 card-title">Entrega (Delivery)</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper. Fusce dapibus tellus cursus.
+                    Responsável pela captação de áudio, contribuí para este curta-metragem de ficção apresentado em um festival internacional universitário.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #3f78e0">
-                    <span class="span">See Project</span>
+                  <a href="https://www.youtube.com/watch?v=2pzwauRySrI&ab_channel=FestivalNOIA" class="btn-text" style="color: #3f78e0">
+                    <span class="span">Assistir ao curta</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
@@ -464,7 +463,7 @@
                 </div>
 
                 <figure class="card-banner" data-reveal="left">
-                  <img src="./assets/images/project-2.png" width="600" height="367" loading="lazy" alt="Web Design"
+                  <img src="./assets/images/project-1.png" width="500" height="367" loading="lazy" alt="Projeto 2"
                     class="w-100">
                 </figure>
 
