ajustando texto de abertura

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
               André Neckel Miguel
             </h1>
 
-            <p class="section-text" data-reveal="top" data-reveal-delay="0.75s" style="font-size: 19px;">
-              Sou um jovem músico e engenheiro de áudio brasileiro com anos de experiência. Atualmente formado em produção fonográfica na Unisinos e já gravei, mixei e masterizei projetos de artistas de todo o país, e agora estou expandindo para trabalhar com pessoas de todo o mundo.
+            <p class="section-text" data-reveal="top" data-reveal-delay="0.75s" style="font-size: 20px;">
+              Sou um jovem músico e produtor fonográfico brasileiro com anos de experiência. Formado em Produção Fonográfica pela Unisinos, já gravei, mixei e masterizei projetos de artistas de todo o país, e agora estou expandindo para trabalhar com pessoas de todo o mundo.
             </p>
 
             <div class="btn-wrapper" data-reveal="top" data-reveal-delay="1s">
