finalizando a inclusão dos projetos

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="title-wrapper" data-reveal="top">
 
             <div>
-              <h2 class="h2 section-title" id="project-label">Projetos recentes</h2>
+              <h2 class="h2 section-title" id="project-label">Meus trabalhos</h2>
 
               <p class="section-text">
                 Confira uma seleção de projetos que desenvolvi, cada um refletindo minha abordagem técnica e criativa.
@@ -419,15 +419,15 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class="card-tag" style="color: #a07cc5">Produção</p>
+                  <p class="card-tag" style="color: #a07cc5">Mixagem e masterização</p>
 
-                  <h3 class="h3 card-title">Meu Lado Caótico</h3>
+                  <h3 class="h3 card-title">Privilégio</h3>
 
                   <p class="card-text">
-                    Banda na qual sou responsável por todo processo de produção musical até a masterização.
+                    Realizei a mixagem e masterização desta música para a banda paranaense Like a Tear, garantindo um resultado sonoro alinhado à proposta artística do grupo.
                   </p>
 
-                  <a href="https://open.spotify.com/intl-pt/artist/2guVTLkvO8QxmaRsTYuWTH?si=8H2J9Z1-RBStOLT0aEHYdw" class="btn-text" style="color: #a07cc5">
+                  <a href="https://open.spotify.com/intl-pt/track/7bmjjP26UwpZQJpP9KbCZg?si=62d19b38b72a4565" class="btn-text" style="color: #a07cc5">
                     <span class="span">Ir para página no Spotify</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
@@ -435,8 +435,7 @@
 
                 </div>
 
-                <iframe style="border-radius:12px" data-reveal="right" src="https://open.spotify.com/embed/track/7jIekTCFS7FMK4s75ryk6O?utm_source=generator&theme=0"
-                width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7bmjjP26UwpZQJpP9KbCZg?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
               </div>
             </li>
@@ -451,7 +450,7 @@
                   <h3 class="h3 card-title">Entrega (Delivery)</h3>
 
                   <p class="card-text">
-                    Responsável pela captação de áudio, contribuí para este curta-metragem de ficção apresentado em um festival internacional universitário.
+                    Responsável pela captação de áudio, contribuí para este curta-metragem de ficção que recebeu indicações em diversos festivais de cinema e conquistou prêmios em vários deles.
                   </p>
 
                   <a href="https://www.youtube.com/watch?v=2pzwauRySrI&ab_channel=FestivalNOIA" class="btn-text" style="color: #3f78e0">
@@ -475,27 +474,22 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #7cb798">Web Design</p>
+                  <p class=" card-tag" style="color: #7cb798">PRODUÇÃO - MASTERIZAÇÃO</p>
 
-                  <h3 class="h3 card-title">Missio Theme</h3>
+                  <h3 class="h3 card-title">Meu Lado Caótico</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere porta consectetur cursus porta lobortis. Scelerisque
-                    id ligula felis.
+                    Fui responsável por todo o processo dos dois singles já lançados, desde a produção até a masterização, além de compor e gravar um álbum completo da banda, que será lançado em breve.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #7cb798">
-                    <span class="span">See Project</span>
+                  <a href="https://open.spotify.com/intl-pt/artist/2guVTLkvO8QxmaRsTYuWTH?si=8H2J9Z1-RBStOLT0aEHYdw" class="btn-text" style="color: #7cb798">
+                    <span class="span">Ir para página no Spotify</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/7jIekTCFS7FMK4s75ryk6O?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
                 </div>
-
-                <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-3.png" width="600" height="367" loading="lazy" alt="Web Design"
-                    class="w-100">
-                </figure>
 
               </div>
             </li>
@@ -505,27 +499,132 @@
 
                 <div class="card-content" data-reveal="left">
 
-                  <p class=" card-tag" style="color: #d16b86">Mobile Design</p>
+                  <p class=" card-tag" style="color: #d16b86">Gravação, mixagem e materização</p>
 
-                  <h3 class="h3 card-title">Storage App</h3>
+                  <h3 class="h3 card-title">Respirar</h3>
 
                   <p class="card-text">
-                    Maecenas faucibus mollis interdum sed posuere consectetur est at lobortis. Scelerisque id ligula
-                    porta felis euismod semper.
+                    Atuei na gravação, mixagem e masterização deste single do artista Thalis Sustenido, entregando um produto final com qualidade profissional.
                   </p>
 
-                  <a href="#" class="btn-text" style="color: #d16b86">
-                    <span class="span">See Project</span>
+                  <a href="https://open.spotify.com/intl-pt/track/75bTD7Q4027wm50S4sumhh?si=d5d9b06ade4645d0" class="btn-text" style="color: #d16b86">
+                    <span class="span">Ir para página no Spotify</span>
 
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
 
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/75bTD7Q4027wm50S4sumhh?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
                 </div>
 
-                <figure class="card-banner" data-reveal="right">
-                  <img src="./assets/images/project-4.png" width="620" height="370" loading="lazy" alt="Mobile Design"
-                    class="w-100">
-                </figure>
+              </div>
+            </li>
+
+            <li>
+              <div class="project-card project-card-4" style="background-color: #f8f5fb">
+
+                <div class="card-content" data-reveal="right">
+
+                  <p class=" card-tag" style="color: #a07cc5">Arranjos - Masterização
+                  </p>
+
+                  <h3 class="h3 card-title">Agridoce</h3>
+
+                  <p class="card-text">
+                    Desenvolvi os arranjos e assumi as etapas de gravação, mixagem e masterização da música 'Agridoce', resultando em uma produção sonora autêntica.
+                  </p>
+
+                  <a href="https://on.soundcloud.com/w2nWbYUNudxPyBFp9" class="btn-text" style="color: #a07cc5">
+                    <span class="span">Ouvir a música no soundcloud</span>
+
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                  </a>
+
+                  <figure class="card-banner" data-reveal="left">
+                    <img src="./assets/images/project-5.png" width="620" height="370" loading="lazy" alt="Mobile Design"
+                      class="w-100">
+                  </figure>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="project-card project-card-3" style="background-color: #f1f5fd">
+
+                <div class="card-content" data-reveal="right">
+
+                  <p class=" card-tag" style="color: #3f78e0">Mixagem e masterização</p>
+
+                  <h3 class="h3 card-title">Choroblues</h3>
+
+                  <p class="card-text">
+                    Este samba, criado por três artistas independentes, contou com minha atuação na mixagem e masterização,
+                    buscando realçar cada detalhe da composição.
+                  </p>
+
+                  <a href="https://open.spotify.com/intl-pt/track/3aHBUPremmdSuS9yCr3q5E?si=d7f0c981612f4a83" class="btn-text" style="color: #3f78e0">
+                    <span class="span">Ir para página no Spotify</span>
+
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                  </a>
+
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3aHBUPremmdSuS9yCr3q5E?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="project-card project-card-3" style="background-color: #f5faf7">
+
+                <div class="card-content" data-reveal="left">
+
+                  <p class=" card-tag" style="color: #7cb798">Mixagem e masterização</p>
+
+                  <h3 class="h3 card-title">Moeda Americana</h3>
+
+                  <p class="card-text">
+                    Assumi a mixagem e masterização deste trap, destacando os detalhes e a força da produção dentro do gênero.
+                  </p>
+
+                  <a href="https://open.spotify.com/intl-pt/track/5NRiWCDte3L3JITOr9xO0F?si=94859110a6464b1c" class="btn-text" style="color: #7cb798">
+                    <span class="span">Ir para página no Spotify</span>
+
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                  </a>
+
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/5NRiWCDte3L3JITOr9xO0F?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="project-card project-card-4" style="background-color: #fcf4f6">
+
+                <div class="card-content" data-reveal="left">
+
+                  <p class=" card-tag" style="color: #d16b86">Afinação e Masterização</p>
+
+                  <h3 class="h3 card-title">Bossa do Charlie Brown</h3>
+
+                  <p class="card-text">
+                    Edição de afinação e masterização desta música realizadas por mim, priorizando boa técnica e equilíbrio sonoro.
+                  </p>
+
+                  <a href="https://open.spotify.com/intl-pt/track/4Nk8ZDoypEW1PSXzJ7yEQ3?si=dcd1f9c9e38f4580" class="btn-text" style="color: #d16b86">
+                    <span class="span">Ir para página no Spotify</span>
+
+                    <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                  </a>
+
+                  <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4Nk8ZDoypEW1PSXzJ7yEQ3?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+                </div>
 
               </div>
             </li>
