--- a/index.html
+++ b/index.html
@@ -540,8 +540,8 @@
                     <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
                   </a>
 
-                  <figure class="card-banner" data-reveal="left">
-                    <img src="./assets/images/project-5.png" width="620" height="370" loading="lazy" alt="Mobile Design"
+                  <figure class="card-banner">
+                    <img src="./assets/images/project-5.png" width="620" height="370"
                       class="w-100">
                   </figure>
 
@@ -551,7 +551,7 @@
             </li>
 
             <li>
-              <div class="project-card project-card-3" style="background-color: #f1f5fd">
+              <div class="project-card project-card-4" style="background-color: #f1f5fd">
 
                 <div class="card-content" data-reveal="right">
 
